// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: default 1`] = `
<div
  className="list-footer spacer-top note text-center"
  tabIndex={-1}
>
  <span
    aria-busy={false}
    aria-live="polite"
  >
    x_of_y_shown.3.5
  </span>
  <Button
    className="spacer-left"
    data-test="show-more"
    disabled={false}
    onClick={[Function]}
  >
    show_more
  </Button>
  <DeferredSpinner
    className="text-bottom spacer-left position-absolute"
    loading={false}
  />
</div>
`;

exports[`should render correctly: empty if everything is loaded 1`] = `
<div
  className="list-footer spacer-top note text-center"
  tabIndex={-1}
>
  <span
    aria-busy={false}
    aria-live="polite"
  >
    x_of_y_shown.5.5
  </span>
  <DeferredSpinner
    className="text-bottom spacer-left position-absolute"
    loading={false}
  />
</div>
`;

exports[`should render correctly: empty if no loadMore nor reload props 1`] = `
<div
  className="list-footer spacer-top note text-center"
  tabIndex={-1}
>
  <span
    aria-busy={false}
    aria-live="polite"
  >
    x_of_y_shown.3.5
  </span>
  <DeferredSpinner
    className="text-bottom spacer-left position-absolute"
    loading={false}
  />
</div>
`;

exports[`should render correctly: force show load more button if count % pageSize is 0, and total is undefined 1`] = `
<div
  className="list-footer spacer-top note text-center"
  tabIndex={-1}
>
  <span
    aria-busy={false}
    aria-live="polite"
  >
    x_show.60
  </span>
  <Button
    className="spacer-left"
    data-test="show-more"
    disabled={false}
    onClick={[Function]}
  >
    show_more
  </Button>
  <DeferredSpinner
    className="text-bottom spacer-left position-absolute"
    loading={false}
  />
</div>
`;

exports[`should render correctly: loading 1`] = `
<div
  className="list-footer spacer-top note text-center"
  tabIndex={-1}
>
  <span
    aria-busy={true}
    aria-live="polite"
  >
    x_of_y_shown.3.5
  </span>
  <Button
    className="spacer-left"
    data-test="show-more"
    disabled={true}
    onClick={[Function]}
  >
    show_more
  </Button>
  <DeferredSpinner
    className="text-bottom spacer-left position-absolute"
    loading={true}
  />
</div>
`;

exports[`should render correctly: reload 1`] = `
<div
  className="list-footer spacer-top note text-center"
  tabIndex={-1}
>
  <span
    aria-busy={false}
    aria-live="polite"
  >
    x_of_y_shown.3.5
  </span>
  <Button
    className="spacer-left"
    data-test="reload"
    disabled={false}
    onClick={[MockFunction]}
  >
    reload
  </Button>
  <DeferredSpinner
    className="text-bottom spacer-left position-absolute"
    loading={false}
  />
</div>
`;

exports[`should render correctly: reload, loading 1`] = `
<div
  className="list-footer spacer-top note text-center"
  tabIndex={-1}
>
  <span
    aria-busy={true}
    aria-live="polite"
  >
    x_of_y_shown.3.5
  </span>
  <Button
    className="spacer-left"
    data-test="reload"
    disabled={true}
    onClick={[MockFunction]}
  >
    reload
  </Button>
  <DeferredSpinner
    className="text-bottom spacer-left position-absolute"
    loading={true}
  />
</div>
`;

exports[`should render correctly: total undefined 1`] = `
<div
  className="list-footer spacer-top note text-center"
  tabIndex={-1}
>
  <span
    aria-busy={false}
    aria-live="polite"
  >
    x_show.3
  </span>
  <DeferredSpinner
    className="text-bottom spacer-left position-absolute"
    loading={false}
  />
</div>
`;
